Quorum3/Library/Tests/TypeCheckerGenerated/Pass/RetAssignTextObjUndefinedField.quorum
class Main
    Text v = Test()
    action Main
        if v = undefined
            output "passed"
        end
    end

    action Test() returns Text
        return undefined
    end
end