Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextObjObject.quorum
class Main
    action Main
        Text v = Test()
    end

    action Test() returns Text
        Object var
        return var
    end
end